src/global.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');

:root {
  --main-bg-color: #f9f6f6;
  --secondary-bg-color: #495057;
  --main-font-color: #495057;
  --secondary-font-color: #ee6c4d;
}

* {
  box-sizing: border-box;
}

body {
  font-family: 'Oswald', serif;
  margin: 0;
  color: var(--main-font-color);
  background-color: var(--main-bg-color);
  letter-spacing: 1px
}

h1 {
  font-size: 3rem;
  color: var(--secondary-font-color);
}

small {
  font-size: 1rem;
}

p, a {
  font-size: 1.3rem;
  color: var(--main-font-color);
}

a:hover {
  color: var(--secondary-font-color);
}

hr {
  border: dashed 2px;
  margin: 20px 0;
}

button {
  font-size: 1.5rem;
  font: inherit;
  background-color: var(--main-bg-color);
  color: var(--main-font-color);
  text-transform: uppercase;
  transition: background-color 0.2s linear;
}

button:hover {
  background-color: var(--secondary-font-color);
  transition: background-color 0.2s linear;
}

button:active {
  transform: scale(0.98);
}

button:focus {
  outline: 0;
}

img {
  max-width: 100%;
  max-height: 400px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

@media(min-width: 800px) {
  img {
    max-width: 450px;
  }
}

